# hw-prim

./: .gitignore  .travis.yml  LICENSE  README.md  auto-tag.sh  circle.yml  hw-prim.cabal  nox  package.yaml  project.sh  publish.sh  stack.yaml  up.sh
.circleci/: config.yml  whitelist-dependencies.txt
.github/workflows/: backblaze.yml  haskell.yml
bench/: Main.hs
bench/Bench/: MapAccumL.hs  MapAccumLFusable.hs  MapId.hs  MapOnId.hs  MapOnStateId.hs
hlint/: HlintDriver.hs
scripts/: autotag  autotag.sh  nix-mk  nox  up
src/HaskellWorks/: Foreign.hs
src/HaskellWorks/Control/Monad/: Lazy.hs
src/HaskellWorks/Data/: AtIndex.hs  BitString.hs  BitStrings.hs  Branchless.hs  ByteString.hs  Char.hs  Concat.hs  Cons.hs  Container.hs  Decode.hs  Drop.hs  Empty.hs  Filter.hs  Foldable.hs  ForeignPtr.hs  FromByteString.hs  FromForeignRegion.hs  FromString.hs  Generate.hs  Head.hs  IndexedSeq.hs  Length.hs  Naive.hs  Narrow.hs  Null.hs  Ops.hs  Pattern.hs  Positioning.hs  Product.hs  Search.hs  Seq.hs  Sign.hs  Snoc.hs  Take.hs  TreeCursor.hs  Uncons.hs  Unsign.hs  Unsnoc.hs  Widen.hs  Word.hs
src/HaskellWorks/Data/BitStrings/: Builder.hs
src/HaskellWorks/Data/ByteString/: Builder.hs  Lazy.hs
src/HaskellWorks/Data/Char/: IsChar.hs
src/HaskellWorks/Data/Narrow/: Narrow16.hs  Narrow32.hs  Narrow64.hs  Narrow8.hs
src/HaskellWorks/Data/Vector/: AsVector64.hs  AsVector64ns.hs  AsVector64s.hs  AsVector8.hs  AsVector8ns.hs  AsVector8s.hs  BoxedVectorLike.hs  Storable.hs  StorableVectorLike.hs  VectorLike.hs
src/HaskellWorks/Data/Widen/: Widen16.hs  Widen32.hs  Widen64.hs  Widen8.hs
test/HaskellWorks/Data/: ByteStringSpec.hs  FoldableSpec.hs  FromByteStringSpec.hs  FromForeignRegionSpec.hs  SearchSpec.hs
test/HaskellWorks/Data/Vector/: AsVector64nsSpec.hs  AsVector64sSpec.hs  AsVector8nsSpec.hs  AsVector8sSpec.hs  StorableSpec.hs
