name:           hw-prim
version:        0.6.2.0
synopsis:       Primitive functions and data types
description:    Primitive functions and data types.
category:       Data
stability:      Stable
homepage:       http://github.com/haskell-works/hw-prim#readme
bug-reports:    https://github.com/haskell-works/hw-prim/issues
author:         John Ky
maintainer:     newhoggy@gmail.com
copyright:      2016-2018 John Ky
license:        BSD3
license-file:   LICENSE
tested-with:    GHC == 8.4.2, GHC == 8.2.2, GHC == 8.0.2, GHC == 7.10.3
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/haskell-works/hw-prim

flag bounds-checking-enabled
  description: Enable bmi2 instruction set
  manual: False
  default: False

library
  exposed-modules:
      HaskellWorks.Data.AtIndex
      HaskellWorks.Data.ByteString
      HaskellWorks.Data.Char.IsChar
      HaskellWorks.Data.Concat
      HaskellWorks.Data.Container
      HaskellWorks.Data.Decode
      HaskellWorks.Data.Drop
      HaskellWorks.Data.Empty
      HaskellWorks.Data.Filter
      HaskellWorks.Data.FromByteString
      HaskellWorks.Data.FromForeignRegion
      HaskellWorks.Data.Generate
      HaskellWorks.Data.Head
      HaskellWorks.Data.Length
      HaskellWorks.Data.Naive
      HaskellWorks.Data.Positioning
      HaskellWorks.Data.Product
      HaskellWorks.Data.Search
      HaskellWorks.Data.Sign
      HaskellWorks.Data.Snoc
      HaskellWorks.Data.Take
      HaskellWorks.Data.TreeCursor
      HaskellWorks.Data.Uncons
      HaskellWorks.Data.Unsign
      HaskellWorks.Data.Vector.AsVector64
      HaskellWorks.Data.Vector.AsVector64s
      HaskellWorks.Data.Vector.BoxedVectorLike
      HaskellWorks.Data.Vector.StorableVectorLike
  other-modules:
      HaskellWorks.Data.Char
      Paths_hw_prim
  other-extensions: AllowAmbiguousTypes
  hs-source-dirs:
      src
  ghc-options: -Wall -O2 -msse4.2
  build-depends:
      base >=4.8 && <5
    , bytestring >=0.9 && <0.11
    , mmap >=0.5 && <0.6
    , transformers >=0.4 && <0.6
    , vector >=0.12 && <0.13
  if flag(bounds-checking-enabled)
    cpp-options: -DBOUNDS_CHECKING_ENABLED
  default-language: Haskell2010

test-suite hw-prim-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      HaskellWorks.Data.FromByteStringSpec
      HaskellWorks.Data.FromForeignRegionSpec
      HaskellWorks.Data.SearchSpec
      HaskellWorks.Data.Vector.AsVector64sSpec
      Paths_hw_prim
  hs-source-dirs:
      test
  other-extensions: AllowAmbiguousTypes
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck >=2.10 && <2.12
    , base >=4.8 && <5
    , bytestring >=0.9 && <0.11
    , directory >=1.2 && <1.4
    , exceptions >=0.8 && <0.11
    , hedgehog >=0.5 && <0.7
    , hspec >=2.4 && <2.6
    , hw-hspec-hedgehog >=0.1 && <0.2
    , hw-prim
    , mmap >=0.5 && <0.6
    , transformers >=0.4 && <0.6
    , vector >=0.12 && <0.13
  if flag(bounds-checking-enabled)
    cpp-options: -DBOUNDS_CHECKING_ENABLED
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover

benchmark bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Paths_hw_prim
  hs-source-dirs:
      bench
  other-extensions: AllowAmbiguousTypes
  ghc-options: -Wall -O2 -msse4.2
  build-depends:
      base >=4.8 && <5
    , bytestring >=0.9 && <0.11
    , criterion >=1.2 && <1.5
    , hw-prim
    , mmap >=0.5 && <0.6
    , transformers >=0.4 && <0.6
    , vector >=0.12 && <0.13
  if flag(bounds-checking-enabled)
    cpp-options: -DBOUNDS_CHECKING_ENABLED
  default-language: Haskell2010
